@@ -1,5 +1,4 @@
 0.5.2
-	bug: updating library requires a restart
 	progressbar for update?
 	Interface settings
 		- Stop playback on exit
